[package]
name = "sot-server-ip-finder"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.13.0"
libloading = "0.7.4"
get_if_addrs = "0.5.3"
pcap = "1.0.0"
sysinfo = "0.28.2"
winroute = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip-extract = "0.1.2"
winres = "0.1.12"
